# ocaml-denostubs

./: .gitignore  LICENSE  README.md  build.sh  denostubs.opam  package.json  ts_rest.ts
bindings/: Denostubs.ml  Stub_Bindings.ml  dune
client/: asdf.c
denostubs/: Denostubs.ml  denostubs.ml  denostubs_inverted.ml  denostubs_inverted.mli  denostubs_types.ml  dune
esy.lock/: index.json
lib/: Util.ml  dune
mylib/: dune  mylib.ml
