opam-version: "2.0"
name: "denostubs"
version: "0.1"
synopsis: "Deno-ffi stubs generator"
description: """
denostubs is a package which extends Ctypes package's inverted stubs to populate deno-compatible stubs.
"""
maintainer: "Woosang Lee <recollect12@gmail.com>"
authors: "Woosang Lee <recollect12@gmail.com>"
license: "MIT"
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ 
  "ocaml"  {>= "4.08.0"}
  "ctypes" {>= "0.19.1"}
  "dune"   {>= "2.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]