opam-version: "2.0"
name: "denostubs"
version: "0.0.1"
synopsis: "Deno-ffi stubs generator"
description: """
denostubs is a package which extends Ctype's inverted stubs to populate deno-compatible stubs(ffi).
"""
maintainer: "Woosang Lee <recollect12@gmail.com>"
authors: "Woosang Lee <recollect12@gmail.com>"
license: "MIT"
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ 
  "ocaml"  {>= "4.13.1"}
  "ctypes" {>= "0.15.0"}
  "dune"   {>= "2.5.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]