(executable
 (name mylib)
 (libraries bindings ctypes lib)
 (foreign_stubs (language c) (names deno_init mylib))
 (flags :standard -linkall)
 (modes (native shared_object)))

(install
 (section lib)
 (files (mylib.so as libmylib.so) mylib.h mylib.ts))

(rule
 (targets deno_init.c mylib.c mylib.h mylib_bindings.ml mylib.ts)
 (deps ../gen/Gen.exe)
 (action (run %{deps} ./)))